--- a/front-end/src/app/components/navbar/navbar.component.html
+++ b/front-end/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fbfbfb;">
   <div class="container">
-    <img
-      class="navbar-brand"
-      width="100px"
-      height="100px"
-      src="assets/logo.png"
-    />
+    <img class="navbar-brand" width="100px" height="100px" src="assets/logo.png" />
     <!--<button
       class="navbar-toggler"
       type="button"
@@ -32,11 +27,13 @@
           <a class="nav-link" href="/productos">Productos</a>
         </li>
       </ul>
-     <!--<span style="color:#143F6B" class="animate__animated animate__bounceInRight p-3" *ngIf="changeText">Ver carrito</span>-->
-      <button (mouseover)="changeText=true" (mouseout)="changeText=false" id="cart" type="button"
-        class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        <i class="fa fa-shopping-cart" aria-hidden="true" data-bs-toggle="modal" data-bs-target="#myModal"></i>
-      </button>
+      <!--<span style="color:#143F6B" class="animate__animated animate__bounceInRight p-3" *ngIf="changeText">Ver carrito</span>-->
+      <div *ngIf="router.url.startsWith('/productos')">
+        <button (mouseover)="changeText=true" (mouseout)="changeText=false"
+          id="cart" type="button" class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          <i class="fa fa-shopping-cart" aria-hidden="true" data-bs-toggle="modal" data-bs-target="#myModal"></i>
+        </button>
+      </div>
     </div>
   </div>
 </nav>
