--- a/front-end/src/app/components/productos/productos.component.html
+++ b/front-end/src/app/components/productos/productos.component.html
@@ -55,33 +55,24 @@
         <div *ngFor="let p of productos; let i = index" class="col-4 m-0 p-0">
           <div class="card-group animate__animated animate__flipInX">
             <div class="card">
-              <img
-                src="https://http2.mlstatic.com/D_NQ_NP_733120-MLA50131748752_052022-O.webp"
-                alt=""
-                class=""
-              />
+              <img src="https://http2.mlstatic.com/D_NQ_NP_733120-MLA50131748752_052022-O.webp" alt="" class="" />
               <div class="card-body">
                 <h5 class="card-title" style="font-size: 22px">
                   {{ p.nombre }}
                 </h5>
                 <h4 class="cart-text d-inline text-dark">
                   ${{ p.precioConDescuento }}
-                  <h4
-                    class="d-inline tachado text-secondary"
-                    style="font-size: 15px"
-                  >
+                  <h4 class="d-inline tachado text-secondary" style="font-size: 15px">
                     ${{ p.precioOriginal }}
                   </h4>
-                  <h4
-                    class="mx-2 d-inline text-success"
-                    style="font-size: 18px"
-                  >
+                  <h4 class="mx-2 d-inline text-success" style="font-size: 18px">
                     {{ p.descuento }}% Off
                   </h4>
                 </h4>
               </div>
               <div class="m-auto">
-                <button class="btn mb-3" style="background-color: #be5301; color: #ffffff" type="button" (click)="setAgregarProductoAlCarrito(p.id)">
+                <button class="btn mb-3" style="background-color: #be5301; color: #ffffff" type="button"
+                  (click)="agregarProductoAlCarrito(p.id)" (click)="agregarCarrito()">
                   Agregar al carrito
                 </button>
               </div>
@@ -92,59 +83,41 @@
       </div>
     </div>
   </div>
-  <div
-    class="modal fade"
-    id="exampleModal"
-    tabindex="-1"
-    aria-labelledby="exampleModalLabel"
-    aria-hidden="true"
-  >
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">Carrito</h5>
-          <button
-            type="button"
-            class="btn-close"
-            data-bs-dismiss="modal"
-            aria-label="Close"
-          ></button>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <div *ngIf="carrito.length > 0; else elseCondicion">
+          <div *ngIf="carrito.productos.length > 0; else elseCondicion">
             <table class="table table-responsive-xs table-striped table-hover">
               <thead class="thead-dark">
                 <tr>
                   <th scope="col">Producto</th>
                   <th scope="col">Nombre</th>
+                  <th scope="col">Cantidad</th>
                   <th scope="col">Precio</th>
                   <th scope="col">Descuento</th>
                   <th scope="col">Eliminar</th>
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let p of carrito; let i = index">
+                <tr *ngFor="let p of carrito.productos; let i = index">
                   <td class="col-1">
-                    <img
-                      src="{{ p.imagen }}"
-                      alt=""
-                      class="rounded img-thumbnail img-fluid"
-                    />
+                    <img src="{{ p.imagen }}" alt="" class="rounded img-thumbnail img-fluid" />
                   </td>
                   <td>{{ p.nombre }}</td>
-                  <td>{{ p.precioWithDiscount }}</td>
+                  <td>{{p.cantidad}}</td>
+                  <td>{{ p.precioConDescuento }}</td>
                   <td>{{ p.descuento }}</td>
                   <td>
-                    <button
-                      type="button"
-                      class="close"
-                      style="
+                    <button type="button" class="close" style="
                         background-color: rgb(204, 0, 0);
                         border: none;
                         color: #ffffff;
-                      "
-                      data-dismiss="modal"
-                    >
+                      " data-dismiss="modal" (click)="eliminarProductoDelCarrito(carrito.id,p.id)">
                       &times;
                     </button>
                   </td>
@@ -157,13 +130,8 @@
           </ng-template>
         </div>
         <div class="modal-footer">
-          <button
-            type="button"
-            (click)="carritoPage()"
-            [disabled]="carrito.length <= 0"
-            class="btn"
-            style="background-color: #be5301; color: #ffffff"
-          >
+          <button type="button"  [disabled]="carrito.productos.length <= 0" class="btn"
+            style="background-color: #be5301; color: #ffffff" [routerLink]="['/carrito', carrito.id]">
             Continuar
           </button>
         </div>
