--- a/front-end/src/app/views/signin/signin.component.html
+++ b/front-end/src/app/views/signin/signin.component.html
@@ -26,8 +26,7 @@
       </div>
       <div class="form-element form-submit">
         <input
-          class="w-100 btn btn-lg"
-          style="background-color:#d26410; color: #FFFFFF"
+        class="btn btn-lg btn-success w-100 mt-2"
           type="submit"
           value="Ingresar"
         />
