--- a/front-end/src/app/views/signup/signup.component.html
+++ b/front-end/src/app/views/signup/signup.component.html
@@ -90,10 +90,9 @@
       class="alert alert-danger">La contraseña es requerida</div>
     </div> 
     <div class="my-3">
-      <button class="w-100 btn" style="background-color:#d26410; color: #FFFFFF" type="submit" [disabled]="signupForm.invalid">Registrarse</button>
+      <!--<button class="w-100 btn" style="color:black" type="submit" [disabled]="signupForm.invalid">Registrarse</button>-->
       <input
-      class="w-100 btn btn-lg"
-      style="background-color:#d26410; color: #FFFFFF"
+      class="btn btn-lg btn-success w-100 mt-2"
       type="submit"
       value="Crear Cuenta"
     />
