--- a/front-end/src/app/views/signin/signin.component.html
+++ b/front-end/src/app/views/signin/signin.component.html
@@ -1,4 +1,3 @@
-
 <main class="my-4">
   <form [formGroup]="signinForm" (ngSubmit)="onSubmit()">
     <h2 class="mb-3 fw-normal text-center">Iniciar Sesión</h2>
@@ -20,20 +19,35 @@
       </div>
       <div class="form-element form-stack">
         <label for="password" class="form-label">Contraseña</label>
-        <input class="campo-entrada ms-2" type="password" name="password" formControlName="password" />
-        <div *ngIf="signinForm.get('password')?.touched && signinForm.get('password')?.errors?.['required']"
-        class="alert alert-danger">La contraseña es requerida</div>
+        <input
+          class="campo-entrada ms-2"
+          type="password"
+          name="password"
+          formControlName="password"
+        />
+        <div
+          *ngIf="signinForm.get('password')?.touched && signinForm.get('password')?.errors?.['required']"
+          class="alert alert-danger"
+        >
+          La contraseña es requerida
+        </div>
       </div>
       <div class="form-element form-submit">
         <input
-        class="btn btn-lg btn-success w-100 mt-2"
+          class="btn btn-lg btn-success w-100 mt-2"
           type="submit"
           value="Ingresar"
         />
       </div>
       <label class="mt-4 text-center"
-        >¿Aún no tienes una cuenta?
-        <a class="w-100" style="color:#be5301; font-weight: 600; text-decoration: none;" href="/signup">Registrate</a></label
+        >¿Aún no tienes una cuenta?<a
+          routerLink="/signup"
+          routerLinkActive="active"
+          class="w-100"
+          style="color: #be5301; font-weight: 600; text-decoration: none"
+        >
+          Registrate</a
+        ></label
       >
     </div>
   </form>
