--- a/front-end/src/app/views/home/home.component.html
+++ b/front-end/src/app/views/home/home.component.html
@@ -1,7 +1,68 @@
 <h1 class="text-center mb-3 my-4">POCAS PULGAS PETSHOP</h1>
-<h2 class="text-center mb-4">¡Hacemos envíos a toda la Argentina! <br>Comprá acá lo que necesita tu mascota y recibilo en tu domicilio.</h2>
+<h2 class="text-center mb-4">
+  ¡Hacemos envíos a toda la Argentina! <br />Comprá acá lo que necesita tu
+  mascota y recibilo en tu domicilio.
+</h2>
 <app-banner></app-banner>
-<div class="promos mb-4">
-  <img src="https://firebasestorage.googleapis.com/v0/b/tallerweb2-1f7fb.appspot.com/o/promo%20(2).png?alt=media&token=58003c9b-868d-470a-aff8-bd14693a6d72" alt="">
-  <img src="https://firebasestorage.googleapis.com/v0/b/tallerweb2-1f7fb.appspot.com/o/promo%20(3).png?alt=media&token=8f1a400c-e698-4013-97f7-859b31ea02d6" alt="">
+<div class="container">
+<div class="row d-flex justify-content-between w-100">
+  <img
+    class="col-xs-12 col-sm-12 col-md-6 col-lg-6 mb-4"
+    src="assets/images/Promo1.png"
+    alt="promo 1"
+  />
+  <img
+    class="col-xs-12 col-sm-12 col-md-6 col-lg-6 mb-4"
+    src="assets/images/Promo2.png"
+    alt="promo 2"
+  />
+</div>
+</div>
+<section class="garantia p-4">
+  <img src="assets/iconos/check.svg" alt="" />
+  <div class="mx-3">
+    <h2 style="color: white; font-weight: 600;">
+      GARANTÍA TOTAL EN TU COMPRA
+    </h2>
+    <a
+      href="#"
+      class=" text-decoration-none"
+      style="color: antiquewhite"
+      >Ver bases y condiciones</a
+    >
+  </div>
+  <div></div>
+</section>
+
+<div class="container">
+  <div class="circle">
+    <div class="aligner">
+      <img
+        src="assets/iconos/carrito.svg"
+        style="height: 50px; width: auto; margin-bottom: 10px"
+        alt="carrito"
+      />
+      Agregá a tu carrito los productos que necesitás.
+    </div>
+  </div>
+  <div class="circle">
+    <div class="aligner">
+      <img
+        src="assets/iconos/tarjeta.svg"
+        style="height: 50px; width: auto; margin-bottom: 10px"
+        alt="tarjeta"
+      />
+      Elegí el medio de pago que desees y aprovechá nuestras promos.
+    </div>
+  </div>
+  <div class="circle">
+    <div class="aligner">
+      <img
+        src="assets/iconos/producto.svg"
+        style="height: 50px; width: auto; margin-bottom: 10px"
+        alt="producto"
+      />
+      Recibí tu pedido o coordiná tu punto de retiro.
+    </div>
+  </div>
 </div>
