--- a/front-end/src/app/components/productos/productos.component.css
+++ b/front-end/src/app/components/productos/productos.component.css
@@ -38,15 +38,6 @@ a {
 [class*=card-product-grid] .img-wrap img {
     width: 300px;
 	height: auto;
-	-webkit-transform: scale(1);
-	transform: scale(1);
-	-webkit-transition: .3s ease-in-out;
-	transition: .6s ease-in-out;
-}
-[class*=card-product-grid] .img-wrap:hover img {
-    width: 350px;
-    -webkit-transform: scale(1.3);
-	transform: scale(1.2);
 }
 
 .mix-blend-mode {
@@ -119,4 +110,8 @@ a {
   }
   .modal .modal-body {
     overflow-y: auto;
+  }
+
+  h6 {
+    font-weight: 600;
   }
