--- a/front-end/src/app/components/carrito/carrito.component.html
+++ b/front-end/src/app/components/carrito/carrito.component.html
@@ -31,7 +31,8 @@
             <td>
               <button type="button" class="close" style="
                   background-color: rgb(204, 0, 0);
-                  border: none;
+                  border-radius: 5px;
+                  border:none;
                   color: #ffffff;
                 " data-dismiss="modal" (click)="eliminarProductoDelCarrito(carrito.id,p.id)">
                 &times;
@@ -79,55 +80,58 @@
                 ESTRADA 01904 Piso Dpto. 1755 RAFAEL CASTILLO , Provincia Buenos
                 Aires , Argentina
               </p>
-              <button type="submit" class="btn btn-success btn-block w-100">
+              <button type="submit" class="btn btn-outline-success btn-block w-100">
                 Actualizar datos
               </button>
             </div>
           </div>
           <div class="card mb-3">
             <div class="card-body">
-              <h5 class="card-title">{{ carrito.productos.length }} Productos</h5>
+              <h5 class="card-title">{{ carrito.productos.length }} Productos en total</h5>
               <!-- <p class="card-text">Transporte: $200</p> -->
-              <p class="card-text">{{total}}</p>
+              <p class="card-text">${{total}}</p>
             </div>
           </div>
-          <button type="submit" class="btn btn-success btn-block w-100">
+          <button type="submit" class="btn btn-success btn-block w-100 mb-5">
             Confirmar compra
           </button>
         </div>
+        
       </div>
     </div>
     <div class="col-2 offset-1 m-auto animate__animated animate__backInRight">
       <h5 class="mb-3">Tambien te puede interesar:</h5>
-      <div *ngFor="let p of carrito.productos; let i = index" class="col m-0 p-0">
-        <div class="card-group animate__animated animate__flipInX">
-          <div class="card">
-            <img
-              src="https://http2.mlstatic.com/D_NQ_NP_733120-MLA50131748752_052022-O.webp"
-              alt=""
-              class=""
-            />
-            <div class="card-body">
-              <h5 class="card-title" style="font-size: 18px">{{ p.nombre }}</h5>
-              <h4 class="cart-text d-inline text-dark">
-                ${{ p.precioConDescuento }}
-                <h4 class="mx-2 d-inline text-success" style="font-size: 18px">
-                  {{ p.descuento }}% Off
-                </h4>
-              </h4>
-            </div>
-            <div class="my-2">
-              <input
-                class="w-100 btn btn-lg"
-                style="background-color: #d26410; color: #ffffff"
-                type="submit"
-                value="Agregar" (click)="agregarProductoAlCarrito(p.id)"
-              />
-            </div>
-          </div>
-          <br />
-        </div>
-      </div>
+        <div
+        *ngFor="let p of carrito.productos; let i = index"
+            class="col-12"
+          >
+            <figure class="card card-product-grid h-100">
+              <div class="img-wrap rounded bg-gray-light">
+                <span class="topbar">
+                  <span class="badge tag-discount">-{{ p.descuento }}%</span>
+                </span>
+                <img class="mix-blend-mode" src="{{ p.imagen }}" />
+              </div>
+              <figcaption class="card-product-info">
+                <a href="#" class="title"> {{ p.nombre }}</a>
+                <div class="price-wrap">
+                  <div>
+                    <span class="price">${{ p.precioOriginal }}</span>
+                    <del class="discount-price"
+                      >${{ p.precioConDescuento }}</del
+                    >
+                  </div>
+                </div>
+                <button
+                  (click)="agregarProductoAlCarrito(p.id)"
+                  class="btn btn-sm btn-outline-success w-100 mt-2"
+                >
+                  Agregar a carrito
+                </button>
+                <p class="badge tag-category">Categoría: {{ p.categoria }}</p>
+              </figcaption>
+            </figure>
+        
     </div>
   </div>
 </div>
